[package]
name = "iron"
version = "0.1.0"
authors = ["Cole Johnson <coleharrisjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/Manishearth/rust-gc
gc = { version = "0.3", features = ["derive"] }
